ja-source/docusaurus-plugin-content-docs/version-2.1/sql-manual/sql-functions/scalar-functions/date-time-functions/convert-tz.md
---
{
  "title": "CONVERT_TZ",
  "language": "ja",
  "description": "指定されたfromtzタイムゾーンからtotzタイムゾーンへdatetime値を変換し、結果の値を返します。特殊なケース："
}
---
## 説明

from_tzで指定されたタイムゾーンからto_tzで指定されたタイムゾーンにdatetime値を変換し、結果の値を返します。特殊なケース：
- パラメータが無効な場合、関数はNULLを返します。

## 構文

```sql
CONVERT_TZ(<dt>, <from_tz>, <to_tz>)
```
## パラメータ

| パラメータ | 説明 |
| -- | -- | 
| `<dt>` | 変換対象の日時値 |
| `<from_tz>` | dtの元のタイムゾーン |
| `<to_tz>` | 変換先のターゲットタイムゾーン |

## 戻り値

計算された日付を返します。

## 例

```sql
select CONVERT_TZ('2019-08-01 13:21:03', 'Asia/Shanghai', 'America/Los_Angeles');
```
```text
+---------------------------------------------------------------------------+
| convert_tz('2019-08-01 13:21:03', 'Asia/Shanghai', 'America/Los_Angeles') |
+---------------------------------------------------------------------------+
| 2019-07-31 22:21:03                                                       |
+---------------------------------------------------------------------------+
```
```sql
select CONVERT_TZ('2019-08-01 13:21:03', '+08:00', 'America/Los_Angeles');
```
```text
+--------------------------------------------------------------------+
| convert_tz('2019-08-01 13:21:03', '+08:00', 'America/Los_Angeles') |
+--------------------------------------------------------------------+
| 2019-07-31 22:21:03                                                |
+--------------------------------------------------------------------+
```
